Working version
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- GPR#1467: Allow expressions sequences inside extended indexing and bigarray
  indexing operators, e.g.: e1.![e2; e3; ...], etc.
  (Nicolás Ojeda Bär, review by Gabriel Radanne, Damien Doligez, Gabriel
  Scherer)

### Type system:

- MPR#7717, GPR#1593: don't treat unboxed constructor size as statically known
  (Jeremy Yallop, report by Pierre Chambart, review by Gabriel Scherer)

- MPR#7611, GPR#1491: reject the use of generative functors as applicative
  (Valentin Gatien-Baron)

- GPR#1469: Use the information from [@@immediate] annotations when
  computing whether a type can be [@@unboxed]
  (Damien Doligez, report by Stephan Muenzel, review by Alain Frisch)

- GPR#1516: Allow float array construction in recursive bindings
  when configured with -no-flat-float-array
  (Jeremy Yallop, report by Gabriel Scherer)

- GPR#1468: Do not enrich type_decls with incoherent manifests
  (Thomas Refis and Leo White, review by Jacques Garrigue)

- GPR#1583: propagate refined ty_arg to Parmatch checks
  (Thomas Refis, review by Jacques Garrigue)

- GPR#1513: Allow compilation units to shadow sub-modules of Pervasives.
  For instance users can now use a largeFile.ml file in their project.
  (Jérémie Dimino, review by Nicolas Ojeda Bar, Alain Frisch and Gabriel Radanne)

- GPR#1609: Changes to ambivalence scope tracking
  (Thomas Refis and Leo White, review by Jacques Garrigue)

### Standard library:

- MPR#7690, GPR#1528: fix the float_of_string function for hexadecimal floats
  with very large values of the exponent.
  (Olivier Andrieu)

- GPR#1637: String.escaped is faster does and not allocate when called with a
  string that does not contain any characters needing to be escaped.
  (Alain Frisch, review by Xavier Leroy and Gabriel Scherer)

### Other libraries:

- MPR#7745, GPR#1629: Graphics.open_graph displays the correct window title on