@@ -641,13 +641,14 @@ class latex =
              | None | Some (Other _) -> []
              end
           | Type_variant l ->
+             if l = [] then (p fmt2 "@[<h 6>  |"; [CodePre (flush2())]) else (
              let constructors =
                List.map (fun {vc_name; vc_args; vc_ret; vc_text} ->
                    p fmt2 "@[<h 6>  | %s" vc_name ;
                    let l = self#latex_of_cstr_args f mod_name (vc_args,vc_ret) in
                    l @ (self#entry_comment f vc_text) ) l
              in
-             List.flatten constructors
+             List.flatten constructors)
           | Type_record l ->
               self#latex_of_record f mod_name l
           | Type_open ->
