@@ -407,7 +407,6 @@ and type_declaration =
 and type_kind =
   | Ptype_abstract
   | Ptype_variant of constructor_declaration list
-        (* Invariant: non-empty list *)
   | Ptype_record of label_declaration list
         (* Invariant: non-empty list *)
   | Ptype_open
