@@ -1920,7 +1920,8 @@ let contains_extension pat =
 (* Build an untyped or-pattern from its expected type *)
 let ppat_of_type env ty =
   match pats_of_type env ty with
-    [{pat_desc = Tpat_any}] ->
+  | [] -> raise Empty
+  | [{pat_desc = Tpat_any}] ->
       (Conv.mkpat Parsetree.Ppat_any, Hashtbl.create 0, Hashtbl.create 0)
   | pats ->
       Conv.conv (orify_many pats)
